criado formulario reativo

--- a/src/app/arbitro-cadastro/arbitro-cadastro.component.html
+++ b/src/app/arbitro-cadastro/arbitro-cadastro.component.html
@@ -1,18 +1,19 @@
 <section class="campo_cadastro">
-    <form #formulario="ngForm" (ngSubmit) = "onSubmit(this.formulario)" >
+    <form (ngSubmit) = "onSubmit(this.formulario)" [formGroup]="formulario">
         <p class="texto_titulo_cadastro">
             Cadastro de Árbitro
         </p>    
         
         <div class="form-group">
             <div class="form-group col-md-12">
-                <label for="nome" class="control-label">Nome</label>
+                <label for="nome" class="control-label">Nome</label>               
             </div>
     
             <div class="form-group col-md-12">
-                <input type="text" class="form-control" name="nome" id="nome" placeholder="Nome" 
-                required #nome="ngModel" [(ngModel)]="arbitro.nome">
+                <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Nome" required> 
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('nome')">*Campo Inválido</label>
             </div>
+          
         </div>
 
         <div class="form-group">
@@ -21,9 +22,9 @@
             </div>
     
             <div class="form-group col-md-12">
-                <input type="password" password class="form-control" name="senha" id="senha"
-                placeholder="Senha" 
-                required #senha="ngModel" [(ngModel)]="arbitro.senha">
+                <input type="password" password class="form-control" formControlName="senha" id="senha"
+                placeholder="Senha" required>
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('senha')">*Campo Inválido</label>
             </div>
         </div>
 
@@ -33,9 +34,9 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="text" class="form-control" name="cpf" id="cpf" placeholder="CPF" 
-                required #cpf="ngModel" [(ngModel)]="arbitro.cpf" 
-                onkeypress="return event.charCode >= 48 && event.charCode <= 57">               
+                <input type="text" class="form-control" formControlName="cpf" id="cpf" placeholder="CPF" 
+                onkeypress="return event.charCode >= 48 && event.charCode <= 57" required>   
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('cpf')">*Campo Inválido</label>            
             </div>
 
             <div class="form-group col-md-6">
@@ -43,8 +44,9 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="dataNascimento" 
-                id="dataNascimento" required #dataNascimento="ngModel" [(ngModel)]="arbitro.dataNascimento">
+                <input type="date" date class="form-control" formControlName="dataNascimento" 
+                id="dataNascimento" required>
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('dataNascimento')">*Campo Inválido</label>
             </div>
         </div>
 
@@ -54,9 +56,9 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="number" number class="form-control" name="altura" id="altura" 
-                placeholder="altura" 
-                required #altura="ngModel" [(ngModel)]="arbitro.altura">
+                <input type="number" number class="form-control" formControlName="altura" id="altura" 
+                placeholder="altura" required>
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('altura')">*Campo Inválido</label>
             </div>
 
             <div class="form-group col-md-6">
@@ -64,17 +66,16 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="number" number class="form-control" name="peso" 
-                placeholder="peso" 
-                id="peso" required #peso="ngModel" [(ngModel)]="arbitro.peso">
+                <input type="number" number class="form-control" formControlName="peso" 
+                placeholder="peso" id="peso" required>
+                <label for="nome" class="text-danger" *ngIf="verificaCampo('peso')">*Campo Inválido</label>
             </div>
         </div>
 
         <div class="form-group col-md-6">
             <div class="form-group col-md-6">
                 <label for="sexo">Sexo</label>
-                <select id="sexo" class="form-control" id="sexo" name="sexo"
-                #sexo="ngModel" [(ngModel)]="arbitro.sexo">
+                <select id="sexo" class="form-control" id="sexo" formControlName="sexo">
                     <option value="Masculino">Masculino</option>
                     <option value="Feminino">Feminino</option>
                 </select>
@@ -84,8 +85,7 @@
         <div class="form-group col-md-6">
             <div class="form-group col-md-6">
                 <label for="idCategoria">Categoria</label>
-                <select id="idCategoria" class="form-control" name="idCategoria"
-                #idCategoria="ngModel" [(ngModel)]="arbitro.idCategoria">
+                <select id="idCategoria" class="form-control" formControlName="idCategoria">
                     <option *ngFor="let categoria of categorias" [value]="categoria.id">{{categoria.nome}}</option>
                 </select>
             </div>
@@ -94,8 +94,7 @@
         <div class="form-group col-md-6">
             <div class="form-group col-md-6">
                 <label for="funcao">Função</label>
-                <select id="funcao" class="form-control" id="funcao" name="funcao"
-                #funcao="ngModel" [(ngModel)]="arbitro.funcao">
+                <select id="funcao" class="form-control" id="funcao" formControlName="funcao">
                     <option value="Arbitro">Árbitro</option>
                     <option value="Assistente">Assistente</option>
                 </select>
