--- a/src/app/arbitro-cadastro/arbitro-cadastro.component.html
+++ b/src/app/arbitro-cadastro/arbitro-cadastro.component.html
@@ -10,7 +10,8 @@
             </div>
     
             <div class="form-group col-md-12">
-                <input type="text" class="form-control" formControlName="nome" id="nome" placeholder="Nome" required> 
+                <input type="text" class="form-control" formControlName="nome" id="nome" 
+                placeholder="Nome" required onkeypress="return event.charCode >= 65"> 
                 <label for="nome" class="text-danger" *ngIf="verificaCampo('nome')">*Campo Inválido</label>
             </div>
           
