--- a/src/app/atleta-cadastro/atleta-cadastro.component.html
+++ b/src/app/atleta-cadastro/atleta-cadastro.component.html
@@ -11,7 +11,7 @@
     
             <div class="form-group col-md-12">
                 <input type="text" class="form-control" required formControlName="nome" id="nome"
-                 placeholder="Nome" onkeypress="return event.charCode >= 65">                
+                 placeholder="Nome" onkeypress="return event.charCode >= 65 || event.charCode == 32">                
                 <label for="nome" class="text-danger" *ngIf="verificaCampo('nome')">*Campo Inválido</label>
             </div>
         </div>
