modulo atleta funcionando

--- a/src/app/atleta-cadastro/atleta-cadastro.component.html
+++ b/src/app/atleta-cadastro/atleta-cadastro.component.html
@@ -51,7 +51,7 @@
             <div class="form-group col-md-6">
                 <label for="idClube">Clube</label>
                 <select id="idClube" class="form-control" id="idClube" formControlName="idClube">
-                    <option [value]=null>Sem Clube</option>
+                    <option [value]=0>Sem Clube</option>
                     <option *ngFor="let clube of clubes" [value]="clube.id">{{clube.nome}}</option>
                 </select>
             </div>
