apresenta CEP ao inves de cidade

--- a/src/app/clube/clube.component.html
+++ b/src/app/clube/clube.component.html
@@ -10,7 +10,7 @@
             <tr>
                 <th scope="col">Nome</th>
                 <th scope="col">Estádio</th>
-                <th scope="col">Cidade</th>
+                <th scope="col">CEP</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +21,7 @@
                     </a>
                 </td>
                 <td>{{clube.estadio}}</td>
-                <td>{{clube.cidade}}</td>
+                <td>{{clube.cep}}</td>
             </tr>
         </tbody>
     </table>
