remocao de cidade

--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -43,7 +43,7 @@
 
                 <div class="col-sm-6">
                     <label class="control-label">Local da Partida</label>
-                    <p>{{sumula.estadio}} - {{sumula.cidade}}</p>
+                    <p>{{sumula.estadio}}</p>
                 </div>
             </div>
         </div>
