--- a/src/app/sumula-visualizacao/sumula-visualizacao.component.html
+++ b/src/app/sumula-visualizacao/sumula-visualizacao.component.html
@@ -17,7 +17,7 @@
             </div>    
             <div class="col-sm-6">
                 <label class="control-label">Local da Partida</label>
-                <p>{{sumula.estadio}} - {{sumula.cidade}}</p>
+                <p>{{sumula.estadio}}</p>
             </div>          
         </div>
     </div>
