implementado sumula get e list

--- a/src/app/sumula/sumula.component.html
+++ b/src/app/sumula/sumula.component.html
@@ -20,8 +20,8 @@
                         {{sumula.data}}
                     </a>
                 </td>
-                <td>{{sumula.mandante}}</td>
-                <td>{{sumula.visitante}}</td>
+                <td>{{sumula.clubeMandante.nome}}</td>
+                <td>{{sumula.clubeVisitante.nome}}</td>
             </tr>
         </tbody>
     </table>
