post comissao e cronologia

--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -70,9 +70,9 @@
                 </div>
         
                 <div class="col-sm-3">
-                    <label for="inicioPrimeiroTempo" class="control-label">Início do Jogo</label>
-                    <input type="time" time class="form-control" name="inicioPrimeiroTempo" 
-                    id="inicioPrimeiroTempo" required #inicioPrimeiroTempo="ngModel" [(ngModel)]="cronologia.inicioPrimeiroTempo">
+                    <label for="inicioPartida" class="control-label">Início do Jogo</label>
+                    <input type="time" time class="form-control" name="inicioPartida" 
+                    id="inicioPartida" required #inicioPartida="ngModel" [(ngModel)]="cronologia.inicioPartida">
                 </div>
 
                 <div class="col-sm-3">
@@ -98,9 +98,9 @@
                 </div>
 
                 <div class="col-sm-3">
-                    <label for="inicioSegundoTempo" class="control-label">Início do Segundo Tempo</label>
-                    <input type="time" time class="form-control" name="inicioSegundoTempo" 
-                    id="inicioSegundoTempo" required #inicioSegundoTempo="ngModel" [(ngModel)]="cronologia.inicioSegundoTempo">
+                    <label for="reinicioParida" class="control-label">Início do Segundo Tempo</label>
+                    <input type="time" time class="form-control" name="reinicioParida" 
+                    id="reinicioParida" required #reinicioParida="ngModel" [(ngModel)]="cronologia.reinicioParida">
                 </div>
         
                 <div class="col-sm-3">
