--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -171,7 +171,7 @@
                     <td>{{relacao.numero}}</td>
                     <td>{{relacao.nome}}</td>
                     <td>{{relacao.titular}}</td>
-                    <td>{{relacao.gols}}</td>
+                    <td>{{relacao.gol}}</td>
                     <td>{{relacao.cartoes}}
                 </tr>
             </tbody>
@@ -205,9 +205,9 @@
             </div>
 
             <div class="col-sm-2">
-                <label for="gols">Gols</label> 
-                <input type="number" number class="form-control" name="gols" 
-                id="gols" #gols="ngModel" [(ngModel)]="inserirRelacaoMandante.gols">
+                <label for="gol">Gols</label> 
+                <input type="number" number class="form-control" name="gol" 
+                id="gol" #gol="ngModel" [(ngModel)]="inserirRelacaoMandante.gol">
             </div>            
         </div>
 
@@ -262,7 +262,7 @@
                     <td>{{relacao.numero}}</td>
                     <td>{{relacao.nome}}</td>
                     <td>{{relacao.titular}}</td>
-                    <td>{{relacao.gols}}</td>
+                    <td>{{relacao.gol}}</td>
                     <td>{{relacao.cartoes}}
                 </tr>
             </tbody>
@@ -296,9 +296,9 @@
             </div>
 
             <div class="col-sm-2">
-                <label for="gols">Gols</label> 
-                <input type="number" number class="form-control" name="gols" 
-                id="gols" #gols="ngModel" [(ngModel)]="inserirRelacaoVisitante.gols">
+                <label for="gol">Gols</label> 
+                <input type="number" number class="form-control" name="gol" 
+                id="gol" #gol="ngModel" [(ngModel)]="inserirRelacaoVisitante.gol">
             </div>            
         </div>
 
