marcara data e hora

--- a/src/app/sumula-visualizacao/sumula-visualizacao.component.html
+++ b/src/app/sumula-visualizacao/sumula-visualizacao.component.html
@@ -14,7 +14,7 @@
             <div class="form-group row">  
                 <div class="col-sm-6">
                     <label class="control-label">Data e Hora da Partida:</label>
-                    <p>{{sumula.data}}</p>
+                    <p>{{dataString}} - {{horaString}}</p>
                 </div>    
                 <div class="col-sm-6">
                     <label class="control-label">Local da Partida</label>
