--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success"> 
         <div class="header_nav">              
             <div class="navbar-nav">                       
-                <a class="nav-item nav-link" routerLink="/arbitro" *ngIf="arbitroLogado.nome == 'ADMIN'">Cadastro Árbitros</a>
-                <a class="nav-item nav-link" routerLink="/clube" *ngIf="arbitroLogado.nome == 'ADMIN'">Cadastro Clubes</a>
-                <a class="nav-item nav-link" routerLink="/atleta" *ngIf="arbitroLogado.nome == 'ADMIN'">Cadastro Atletas</a>
-                <a class="nav-item nav-link" routerLink="/sumula" *ngIf="arbitroLogado.nome">Cadastro Súmula Eletrônica</a>              
+                <a class="nav-item nav-link" routerLink="/arbitro" *ngIf="arbitroLogado.id == '1'">Cadastro Árbitros</a>
+                <a class="nav-item nav-link" routerLink="/clube" *ngIf="arbitroLogado.id == '1'">Cadastro Clubes</a>
+                <a class="nav-item nav-link" routerLink="/atleta" *ngIf="arbitroLogado.id == '1'">Cadastro Atletas</a>
+                <a class="nav-item nav-link" routerLink="/sumula" *ngIf="arbitroLogado.id">Cadastro Súmula Eletrônica</a>              
                 <button class="btn btn-danger" type="button"(click)="onClickSair()" *ngIf="arbitroLogado.nome">  
                     Sair de {{arbitroLogado.nome}} 
                 </button>              
